--- a/code/Directory.Packages.props
+++ b/code/Directory.Packages.props
@@ -1,13 +1,14 @@
 <Project>
 
-  <!--Last updated package versions: November 17, 2025.-->
+  <!--Last updated package versions: December 10, 2025.-->
 
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <Net10>10.0.0</Net10>
-    <Aspire>13.0.0</Aspire>
+    <Net10>10.0.1</Net10>
+    <Aspire>13.0.2</Aspire>
     <OpenTelemetry>1.14.0</OpenTelemetry>
-    <Testcontainers>4.8.1</Testcontainers>
+    <Testcontainers>4.9.0</Testcontainers>
+    <MSExt>10.1.0</MSExt>
   </PropertyGroup>
 
   <ItemGroup Label="Chapter 1 Introducing Tools and Skills for .NET">
@@ -24,13 +25,13 @@
   <ItemGroup Label="Chapter 5 Logging, Tracing, and Metrics for Observability">
     <!--For logging to console.-->
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="$(Net10)" />
-    
+
     <!--For generating OpenAPI documentation.-->
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="$(Net10)" />
-    
+
     <!--For performance counters.-->
-	  <PackageVersion Include="System.Diagnostics.PerformanceCounter" Version="$(Net10)" />
-    
+    <PackageVersion Include="System.Diagnostics.PerformanceCounter" Version="$(Net10)" />
+
     <!--For OpenTelemetry.-->
     <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="$(OpenTelemetry)" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="$(OpenTelemetry)" />
@@ -41,7 +42,7 @@
 
   <ItemGroup Label="Chapter 7 Observing and Modifying Code Execution Dynamically">
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" />
-    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup Label="Chapter 9 Multitasking and Concurrency">
@@ -62,13 +63,13 @@
   </ItemGroup>
 
   <ItemGroup Label="Chapter 13 Benchmarking Performance, Load, and Stress Testing">
-    <PackageVersion Include="BenchmarkDotNet" Version="0.15.6" />
+    <PackageVersion Include="BenchmarkDotNet" Version="0.15.8" />
     <PackageVersion Include="NBomber" Version="6.1.2" />
     <PackageVersion Include="NBomber.Http" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup Label="Chapter 14 Functional and End-to-End Testing of Websites and Services">
-    <PackageVersion Include="Microsoft.Playwright" Version="1.56.0" />
+    <PackageVersion Include="Microsoft.Playwright" Version="1.57.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(Net10)" />
   </ItemGroup>
 
@@ -79,22 +80,23 @@
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="$(Net10)" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="$(Net10)" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="$(Net10)" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(EFCore10)" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(Net10)" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
   <ItemGroup Label="Chapter 16 Cloud-Native Development Using Aspire">
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="$(Aspire)" />
     <PackageVersion Include="Aspire.Hosting.Redis" Version="$(Aspire)" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="$(Net10)" />
-    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="$(Net10)" />
-    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OpenTelemetry)" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="$(OpenTelemetry)" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="$(OpenTelemetry)" />
+    <PackageVersion Include="Aspire.Hosting.Testing" Version="$(Aspire)" />
+    <PackageVersion Include="Aspire.StackExchange.Redis.OutputCaching" Version="$(Aspire)" />
     <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="$(Aspire)" />
     <PackageVersion Include="Aspire.Hosting.SqlServer" Version="$(Aspire)" />
     <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="$(Aspire)" />
     <PackageVersion Include="Aspire.Hosting.Azure.CognitiveServices" Version="$(Aspire)" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="$(MSExt)" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="$(MSExt)" />
+    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OpenTelemetry)" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="$(OpenTelemetry)" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="$(OpenTelemetry)" />
   </ItemGroup>
 
 </Project>
